--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,6 @@
-.booyah-box{
+@import url(https://fonts.googleapis.com/css?family=Prosto+One);
+
+.booyah-box {
   -moz-box-shadow:1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow:1px 1px 2px 0 #d0d0d0;
   box-shadow:1px 1px 2px 0 #d0d0d0;
@@ -20,8 +22,14 @@ body {
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
-.navbar.navbar-inverse{
+.navbar.navbar-inverse {
   background:url('/assets/congruent_outline.png');
   border-radius: 0;
   box-shadow:0px 1px 3px #2a2a2a;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #00E1FF;
+  font-family: 'Prosto One', cursive;
+  
 }
