--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Prosto+One);
+
 
 .booyah-box {
   -moz-box-shadow:1px 1px 2px 0 #d0d0d0;
@@ -30,6 +30,6 @@ body {
 
 .navbar-inverse .navbar-brand {
   color: #00E1FF;
-  font-family: 'Prosto One', cursive;
-  
+  font-family: 'chunkfiveroman', sans-serif;
+  font-size: 26px;
 }
