--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,8 @@
+<div class="text-center">
+	<%= will_paginate @places %>
+</div>
+<br class="clr" />
+
 <% @places.each do |place| %>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= place.name %></h1>
@@ -5,5 +10,3 @@
   <p><%= place.description %></p><br />
 </div>
 <% end %>
-  <!--render page links in the view:-->
-  <%= will_paginate @places %>
