--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,13 @@
             <% end %>
           </li>
         </ul>
+
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <% if user_signed_in? %>
+            <li><%= link_to 'A user is signed in!', '#' %></li>
+          <% else %>
+            <li><%= link_to 'No user is signed in :(', '#' %></li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -44,6 +49,7 @@
   <% if alert.present? %>
     <p class="alert alert-danger"><%= alert %></p>
     <% end %>
+
   <%= yield %>
 
 
