--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .navbar.navbar-inverse {
-  background:url('/assets/congruent_outline.png');
+  background:url('/assets/binding_dark.png');
   border-radius: 0;
   box-shadow:0px 1px 3px #2a2a2a;
 }
