Added Edit page, and edit form

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,9 @@
-<div class= "booyah-box col-xs-10 col-xs-offset-1">
+	<div class= "booyah-box col-xs-10 col-xs-offset-1">
 <h1><%= @place.name %></h1>
 <i><%=@place.address %></i>
 <br/><br/>
 <p><%= @place.description %></P>
+	<div class= "pull-right">
+		<%= link_to 'edit', edit_place_path(@place), class: 'btn btn-primary' %>
+	</div>
 </div>
