Added update functionality to edit button

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,6 +4,6 @@
 <br/><br/>
 <p><%= @place.description %></P>
 	<div class= "pull-right">
-		<%= link_to 'edit', edit_place_path(@place), class: 'btn btn-primary' %>
+		<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
 	</div>
 </div>
