--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-	<h1>Edit Your Place Detials</h1>
+	<h1>Edit <%= @place.name %> Detials:</h1>
 	<%= simple_form_for @place do |f| %>
 	<%= f.input :name %>
 	<%= f.input :address %>
