--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,3 @@
-
-
 .booyah-box {
   -moz-box-shadow:1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow:1px 1px 2px 0 #d0d0d0;
@@ -38,3 +36,9 @@ body {
   clear:both;
 }
 
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 8px;
+}
