--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,22 +2,17 @@
 	<h1><%= @place.name %></h1>
 	<i><%=@place.address %></i>
 	<br/><br/>
-	<p><%= @place.description %></P>
+	<p><%= @place.description %></p>
 
-
-	<style>
-	      #map {
-	        height: 300px;
-	      }
-	</style>
+	<% if @place.latitude.present? && @place.longitude.present? %>
 
 	    <script>
 
 	      function initMap() {
-	        var myLatLng = {lat: -25.363, lng: 131.044};
+	        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
 
 	        var map = new google.maps.Map(document.getElementById('map'), {
-	          zoom: 4,
+	          zoom: 12,
 	          center: myLatLng
 	        });
 
@@ -33,11 +28,14 @@
 	    </script>
 
 	    <div id="map"></div>
+	<% end %>
 
+	<br />
+	
 		<div class= "pull-right">
 			<% if current_user && current_user == @place.user %>
 				<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-				<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
+				<%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
 			<% end %>
 			
 		</div>
