--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -31,7 +31,7 @@
 	<% end %>
 
 	<br />
-	
+
 		<div class= "pull-right">
 			<% if current_user && current_user == @place.user %>
 				<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
@@ -40,3 +40,9 @@
 			
 		</div>
 </div>
+<div class="clearfix"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
+	<%= f.input :message %>
+	<%= f.input :rating %>
+	<%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %>
