--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,12 @@
 <div class= "booyah-box col-xs-10 col-xs-offset-1">
 	<h1><%= @place.name %></h1>
 	<i><%=@place.address %></i>
+	
+	<% @place.photos.each do |photo| %>
+		<%= image_tag photo.picture, :class => 'img-responsive' %>
+		<%= photo.caption %>
+	<% end %>
+
 	<br/><br/>
 	<p><%= @place.description %></p>
 
@@ -32,24 +38,54 @@
 
 	<br />
 
-		<div class= "pull-right">
+		<div class= "btn-toolbar pull-right">
 			<% if current_user && current_user == @place.user %>
+
+			<!-- Button trigger modal -->
+				<button class="btn btn-success pull-left" data-toggle="modal" data-target="#myModalone">
+				  Add a Picture
+				</button>
+				
 				<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
 				<%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
 			<% end %>
 			
+				<!-- Modal -->
+				<div class="modal fade" id="myModalone" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				        <h4 class="modal-title" id="myModalLabel1">Add a Picture</h4>
+				      </div>
+				        <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+				        	<div class="modal-body">
+								<%= f.input :picture %>
+								<%= f.input :caption %>
+							</div>
+								<div class="modal-footer">
+				        			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+									<%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+								</div>
+						<% end %>
+				    </div>
+				  </div>
+				</div>
+
+					
+						
 		</div>
 </div>
 
 <div class="clear"></div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="myModaltwo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+        <h4 class="modal-title" id="myModalLabel2">Add a comment</h4>
       </div>
         <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
         	<div class="modal-body">
@@ -68,7 +104,7 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="pull-left">Comments</h1>
 	<!-- Button trigger modal -->
-	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+	<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModaltwo">
 	  Add a Comment
 	</button>
 </div>
@@ -86,3 +122,5 @@
 		</blockquote>
 	</div>
 <% end %>
+
+<div class="clear"> </div>
